kubernetes/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vueapp-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vueapp
  type: LoadBalancer
