kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-vue-ingress
  annotations:
spec:
  rules:
  - host: hello.books
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vueapp-service
            port: 
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000
